Added in red table arrow. Site in speed-up mode for testing.

--- a/assets/css/lib/fixes.styl
+++ b/assets/css/lib/fixes.styl
@@ -34,3 +34,9 @@
       text-shadow: none!important
       box-shadow: none!important
       -webkit-box-shadow: none!important
+
+   .pattern-bg li.ui-li
+      .ui-btn-inner
+         background: transparent
+      &.ui-btn-active .ui-btn-inner
+         background: rgba(0,0,0,.2)
