--- a/assets/css/skin.styl
+++ b/assets/css/skin.styl
@@ -133,7 +133,12 @@
       &.ui-btn-active
          border-color: #CCC
          .ui-btn-inner
-            background-lowlight()
+            background: rgba(0,0,0,.2)
+      .ui-icon-arrow-r
+         background: url(../images/icons/TableCell_TableNext.png) 50% 50% no-repeat
+         background-size: 10px 14px
+         dropshadow: none
+
 
 .fans
    .fan
@@ -174,7 +179,6 @@
          &.cancel
             background: url(../images/icons/Button_Delete.png) 50% 50% no-repeat
             background-size: 19px 19px
-
       .right-icon
          position: absolute
          right: 10px
@@ -368,6 +372,8 @@
          background-image: url(../images/Overlay_ScrollBarFrame_iPhone@2x.png)
    .pattern-bg li.ui-li
       background-image: url(../images/Pattern_FabricKnit@2x.png)
+      .ui-icon-arrow-r
+         background-image: url(../images/icons/TableCell_TableNext@2x.png)
 
    .icon.gamecell
       background-image: url(../images/icons/icons-gamecell@2x.png)
